# sevendays-crafting-calculator

./: Cargo.toml
src/: lib.rs  main.rs
src/game_data/: item.rs  locale.rs  mod.rs  recipe.rs
