[package]
name = "sevendays-crafting-calculator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.0"
anyhow = "1.0.41"
serde_with = { version = "1.9.4", features = ["chrono"] }
itertools = "0.10.1"
chrono = "0.4.19"
csv = "1.1.6"
lazy_static = "1.4.0"
